# JAMESapc

./: .gitignore  .gitignore~  README.md
agile_grasp_modi/: CMakeLists.txt  frames.gv  package.xml
agile_grasp_modi/include/agile_grasp/: grasp_localizer.h  localization.h  plot.h  plot.h~
agile_grasp_modi/launch/: frames.gv  single_camera_grasps_test.launch  single_camera_grasps_test.launch~  single_camera_grasps_test_gdb.launch~  single_camera_grasps_test_my_desk.launch  static_transform_pub_cmd.txt
agile_grasp_modi/rviz/: single_camera.rviz
build-build_kinfu-Desktop-Default/: CTestTestfile.cmake  build_kinfu.cbp
build-build_kinfu-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-build_kinfu-Desktop-Default/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
build-build_kinfu-Desktop-Default/gtest/: CTestTestfile.cmake  gtest.cbp
build-ros_kinfu-Desktop-Default/: CTestTestfile.cmake  ros_kinfu.cbp
build-ros_kinfu-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_kinfu-Desktop-Default/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
build-ros_kinfu-Desktop-Default/gtest/: CTestTestfile.cmake  gtest.cbp
build-ros_realsense-Desktop-Default/: CTestTestfile.cmake  ros_realsense.cbp
build-ros_realsense-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_realsense-Desktop-Default/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
build-ros_realsense-Desktop-Default/gtest/: CTestTestfile.cmake  gtest.cbp
build_kinfu/: CMakeLists.txt  package.xml
build_kinfu/include/: shelf_scan.h  shelf_scan_node.h
build_kinfu/src/: build_kinfu.cpp  shelf_scan.cpp  shelf_scan_node.cpp
build_kinfu/srv/: shelf_scan_srv.srv
capsicum_detection/: CMakeLists.txt  CMakeLists.txt~
capsicum_detection/scripts/: cloud_parser.py
capsicum_detection/src/: capsicum_detector.cpp  realsense_registration.cpp
clean_labelled_pointcloud/: CMakeLists.txt  package.xml
clean_labelled_pointcloud/src/: clean_labelled_pointcloud_node.cpp
fruit_picking/: CMakeLists.txt  package.xml
fruit_picking/include/: capsicum_detector_old.h
fruit_picking/launch/: field_trial_2.launch  fruit_picking.launch  fruit_picking_demo_no_kinect.launch  fruit_picking_ur_driver.launch
fruit_picking/scripts/: end_effector_path.py  marker_repub.py  path_visualization.py
fruit_picking/src/: camera_move.cpp  capsicum_detector_old.cpp  field_test.cpp  field_trial.cpp  field_trial_2.cpp  fruit_picking.cpp  grasp_pose_experiment.cpp
fruit_rgbd_for_evaluation/: CMakeLists.txt  CMakeLists.txt.user.dff3e27.18  CMakeLists.txt~  package.xml
fruit_rgbd_for_evaluation/include/: capsicum_detector.h  cloud_registration.h  cloud_registration.h~  fruit_rgbd.h~
fruit_rgbd_for_evaluation/launch/: rgbd_launch.launch
fruit_rgbd_for_evaluation/src/: capsicum_detector.cpp  capsicum_segmentation.cpp  capsicum_segmentation.h  cloud_filtering_tools.cpp  cloud_registration.cpp  cloud_registration.cpp~  fruit_rgbd.cpp  fruit_rgbd.cpp~
icra2016_processing/: CMakeLists.txt  package.xml
icra2016_processing/config/: icra2016_markey_array_rviz.rviz  icra2016_rviz.rviz
icra2016_processing/include/: capsicum_segmentation.h
icra2016_processing/launch/: capsicum_segmentation.launch  harvey_moveit.launch
icra2016_processing/src/: capsicum_segmentation.cpp  cloud_filtering.cpp  icra2016_processing.cpp
pc_sub_repub/: CMakeLists.txt  README.txt  package.xml
pc_sub_repub/scripts/: bag_sub_repub.py
realsense/camera/: CMakeLists.txt
realsense_camera_modified/: CMakeLists.txt  package.xml
realsense_camera_modified/config/: RealsenseCamera.cfg
realsense_camera_modified/launch/: realsense_camera.launch  realsense_camera_config.launch  realsense_rviz.launch
realsense_camera_modified/src/: realsense_camera.cpp  realsense_camera_config.cpp
ros_kinfu/: CMakeLists.txt  CMakeLists.txt~
ros_kinfu/cmake/: CustomPCLConfig.cmake
ros_kinfu/launch/: ros_kinfu.launch
ros_kinfu/src/: kinfu_tools.h  ros_kinfu.cpp  ros_kinfu.h
ros_kinfu_ls/: CMakeLists.txt~  package.xml
ros_kinfu_ls/launch/: ros_kinfu.launch
ros_kinfu_ls/src/: kinfu_ls_tools.cpp  kinfu_ls_tools.h  kinfu_ls_viz_tools.cpp  kinfu_ls_viz_tools.h  ros_kinfu_ls.cpp  ros_kinfu_ls.h  ros_kinfu_ls_publisher.cpp  ros_kinfu_ls_publisher.h
ros_realsense/launch/: realsense_camera_with_tf.launch
ros_realsense/src/: ros_realsense.cpp~
scenes/: demo_plane.scene  field_trial_2.scene  harvey_model_plane.scene  harvey_model_simple.scene  harvey_model_simple_old.scene
shelf_scan/: CMakeLists.txt  package.xml
shelf_scan/cmake/: CustomPCLConfig.cmake
shelf_scan/include/: shelf_scan.h
shelf_scan/src/: shelf_scan.cpp  shelf_scan_node.cpp
superquadrics_fitter/: CMakeLists.txt  package.xml
superquadrics_fitter/include/: sample_superquadric.h  superquadric_formulas.h
superquadrics_fitter/include/impl/: fit_superquadric_ceres.hpp  sample_superquadric.hpp  superquadric_formulas.hpp  superquadric_rigid_registration.hpp
superquadrics_fitter/launch/: superquadric_fitter.launch
superquadrics_fitter/src/: main_segmentation_n_detection_test.cpp  main_segmentation_n_fitting_pipeline_test.cpp  superquadric_fitter_subsriber.cpp
superquadrics_fitter/srv/: estimateCapsicumPose.srv
ur5_moveit_config/config/: ur5.srdf
ur5_moveit_config/launch/: moveit.rviz  sensor_manager.launch.xml  ur5.launch  ur5_moveit.launch  ur5_moveit_sensor_manager.launch.xml
vision_visp/visp_hand2eye_calibration_modi/: ros_commands.txt
wire_cutter_controller/: CMakeLists.txt  package.xml
wire_cutter_controller/config/: wire_cutter_position.yaml  wire_cutter_position_dual.yaml
wire_cutter_controller/launch/: controller_manager.launch  start_wire_cutter_controller.launch  start_wire_cutter_controller_dual.launch
(+52 files in other folders)
